rb85 magnetic moment measurements

--- a/optical/data/magmom/rb85/README
+++ b/optical/data/magmom/rb85/README
@@ -1,7 +1,9 @@
 Settings:
 
 *All amplitudes are -40 dB
-
+*WARNING: The equipment setting has changed after Run 11
+*Data becomes noisy for Coil V > 3.0V
+*Resonance peaks get visibily skewed right for Coil V > 3.2V
 
    Run   |   Freq. Center [kHz]  |   Freq. Step [Hz]  |   Coil V [V]  |   Coil Current [mA]
 ----------------------------------------------------------------------------------------------
@@ -25,6 +27,48 @@ Settings:
 ----------------------------------------------------------------------------------------------
     10   |          130          |         50         |     2.00      |        -176.93
 ----------------------------------------------------------------------------------------------
+                           Run 11 - Run 30 Meta Data Lost 
+----------------------------------------------------------------------------------------------
+    31   |          200          |         50         |     0.00      |        -0.11
+----------------------------------------------------------------------------------------------
+    32   |          240          |         50         |     0.23      |        -20.2
+----------------------------------------------------------------------------------------------
+    33   |          280          |         50         |     0.43      |        -39.9
+----------------------------------------------------------------------------------------------
+    34   |          320          |         50         |     0.64      |        -60.1
+----------------------------------------------------------------------------------------------
+    35   |          360          |         50         |     0.84      |        -80.1
+----------------------------------------------------------------------------------------------
+    36   |          400          |         50         |     1.05      |        -100.1
+----------------------------------------------------------------------------------------------
+    37   |          440          |         50         |     1.25      |        -120.0
+----------------------------------------------------------------------------------------------
+    38   |          480          |         50         |     1.46      |        -139.9
+----------------------------------------------------------------------------------------------
+    39   |          510          |         50         |     1.67      |        -160.2
+----------------------------------------------------------------------------------------------
+    40   |          550          |         50         |     1.88      |        -180.4
+----------------------------------------------------------------------------------------------
+    41   |          590          |         50         |     2.08      |        -200.1
+----------------------------------------------------------------------------------------------
+    42   |          630          |         50         |     2.29      |        -219.8
+----------------------------------------------------------------------------------------------
+    43   |          670          |         50         |     2.50      |        -240.3
+----------------------------------------------------------------------------------------------
+    44   |          700          |         50         |     2.70      |        -260.2
+----------------------------------------------------------------------------------------------
+    45   |          740          |         50         |     2.91      |        -280.0
+----------------------------------------------------------------------------------------------
+    46   |          780          |         50         |     3.11      |        -299.9
+----------------------------------------------------------------------------------------------
+    47   |          820          |         50         |     3.32      |        -320.2
+----------------------------------------------------------------------------------------------
+    48   |          860          |         50         |     3.53      |        -340.3
+----------------------------------------------------------------------------------------------
+    49   |          900          |         50         |     3.74      |        -360.4
+----------------------------------------------------------------------------------------------
+    50   |          940          |         50         |     3.94      |        -379.9
+----------------------------------------------------------------------------------------------
 
 
 
@@ -34,4 +78,4 @@ Settings:
 
 
 
-
+ 
