add hyperfine splitting plot

--- a/optical/docs/report/oppumpmagres-reportv1.tex
+++ b/optical/docs/report/oppumpmagres-reportv1.tex
@@ -41,7 +41,12 @@ The energy splitting of the $5^{2}S$ and $5^{2}P$ states due to the Coulomb inte
 
 \begin{figure}
 \includegraphics[width=\columnwidth]{magmom-verterr.png}
-\caption{\label{MagMom} Measurement of the magnetic moment of $^{85}$Rb and $^{85}$Rb.}
+\caption{\label{MagMom} Measurement of the magnetic moment of $^{85}$Rb and $^{87}$Rb.}
+\end{figure}
+
+\begin{figure}
+\includegraphics[width=\columnwidth]{rb85-hyperfine_split.png}
+\caption{\label{HyperFineSplit} (data) Observation of hyperfine splitting of $^{85}$Rb.}
 \end{figure}
 
 \section{Theoretical Model}
