--- a/optical/docs/report/oppumpmagres-reportv1.tex
+++ b/optical/docs/report/oppumpmagres-reportv1.tex
@@ -29,11 +29,11 @@
 % References should be done using the \cite, \ref, and \label commands
 \section{Introduction}
 Rubidium (Rb) is an alkali metal with atomic number $Z=37$.
-Neutral states contain four entirely filled electron shells with no net angular moment and a single valence electron.
+Neutral states contain four entirely filled electron shells with no net angular momentum and a single valence electron.
 In its ground state, the valence electron carries no orbital angular momentum: $5^{2}S_{1/2}$.
-It its first exited state, the valence electron carries one quanta of orbital angular momentum which can either align or anti-align with its spin contribution: $5^{2}P_{1/2}$ or $5^{2}P_{3/2}$. %"align or anti-align" probably isn't the best way to say this...
+In its first exited state, the valence electron carries one quanta of orbital angular momentum which can either align or anti-align with its spin contribution: $5^{2}P_{1/2}$ or $5^{2}P_{3/2}$. %"align or anti-align" probably isn't the best way to say this...
 
-The energy splitting of the $5^{2}S$ and $5^{2}P$ states due to the Coulomb interaction with the nucleus on on the order of a few electron-volts.  The degeneracy of the first excited state is lifted by the spin-orbit coupling
+The energy splitting of the $5^{2}S$ and $5^{2}P$ states due to the Coulomb interaction with the nucleus is on the order of a few electron-volts.  The degeneracy of the first excited state is lifted by the spin-orbit coupling, which is on the order of a ...new
 
 \section{Review of Previous Work}
 \section{Experimental Set-up}
